[gd_scene load_steps=3 format=3 uid="uid://cfeodp70flpq1"]

[ext_resource type="Script" path="res://scripts/ui/WorkbenchCraftingMenu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)

[node name="WorkbenchCraftingMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)
mouse_filter = 1

[node name="CraftingPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="CraftingPanel"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="CraftingPanel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CraftingPanel/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "WORKBENCH CRAFTING"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="CraftingPanel/VBoxContainer/TitleBar"]
layout_mode = 2
text = "X"

[node name="MainContainer" type="HBoxContainer" parent="CraftingPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="CraftingPanel/VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RecipesLabel" type="Label" parent="CraftingPanel/VBoxContainer/MainContainer/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Available Recipes"

[node name="RecipesList" type="ScrollContainer" parent="CraftingPanel/VBoxContainer/MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipesContainer" type="VBoxContainer" parent="CraftingPanel/VBoxContainer/MainContainer/LeftPanel/RecipesList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightPanel" type="VBoxContainer" parent="CraftingPanel/VBoxContainer/MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="ItemInfoPanel" type="PanelContainer" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemInfoContainer" type="VBoxContainer" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ItemInfoPanel"]
layout_mode = 2

[node name="ItemTitle" type="Label" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ItemInfoPanel/ItemInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Select a recipe"
horizontal_alignment = 1

[node name="ItemIcon" type="TextureRect" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ItemInfoPanel/ItemInfoContainer"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="ItemDescription" type="RichTextLabel" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ItemInfoPanel/ItemInfoContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.8, 0.8, 0.8, 1)
bbcode_enabled = true
text = "Select a recipe to see details"
fit_content = true

[node name="RequiredResourcesLabel" type="Label" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ItemInfoPanel/ItemInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Required Materials:"

[node name="ResourcesList" type="VBoxContainer" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ItemInfoPanel/ItemInfoContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel"]
layout_mode = 2

[node name="CraftButton" type="Button" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "CRAFT"

[node name="MoveButton" type="Button" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "MOVE"

[node name="DestroyButton" type="Button" parent="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "DESTROY"

[connection signal="pressed" from="CraftingPanel/VBoxContainer/TitleBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ButtonContainer/CraftButton" to="." method="_on_craft_button_pressed"]
[connection signal="pressed" from="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ButtonContainer/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="CraftingPanel/VBoxContainer/MainContainer/RightPanel/ButtonContainer/DestroyButton" to="." method="_on_destroy_button_pressed"]